# teams-graph-client

./: .env.example  Makefile  README.md  chat-transcript.md  design-decisions.md  example.py  payload.json  pyproject.toml  teams_graph.py
docs/: README.md
docs/adr/: 0001-initial-graph-client-foundation.md  README.md
docs/agent-transcripts/: 2026-04-05.md  README.md
tests/: test_teams_graph.py
